# UMounter

./: AUTHORS  CMakeLists.txt  README
cmake_modules/: FindGLIB2.cmake  FindXML2.cmake
packaging/archlinux/: PKGBUILD
src/: CMakeLists.txt  automounter-private.h  automounter.c  automounter.h  config-private.h  config.c  config.h  logging-private.h  logging.c  logging.h  main.c  rulesparser-private.h  rulesparser.c  rulesparser.h  string.c  string.h  volume-private.h  volume.c  volume.h  volumes-private.h  volumes.c  volumes.h
